# cal-rs

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
cal-core/: Cargo.toml
cal-core/src/: lib.rs
cal-events/: Cargo.toml
cal-events/src/: lib.rs
cal-rs/: Cargo.toml
cal-rs/src/: main.rs
cal-tui/: Cargo.toml
cal-tui/src/: lib.rs
