[workspace]
members = [
    "cal-core",
    "cal-events",
    "cal-tui",
    "cal-rs"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ananth Prathap"]
license = "MIT"


[workspace.dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
uuid = { version = "1.7.0", features = ["v4"] }
